--- a/package.json
+++ b/package.json
@@ -13,4 +13,16 @@
   "keywords": ["telegram", "shoe-store", "mpesa"],
   "author": "Your Name",
   "license": "MIT"
+
+}{
+  "name": "shoe-store",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  }
 }
